# strata-mcp

./: Cargo.toml  README.md
.claude/skills/strata/: SKILL.md
docs/design/: agent-friendly-tools.md
docs/research/: agent-memory-mcp-survey.md  database-mcp-survey.md
src/: convert.rs  lib.rs  server.rs  session.rs
src/tools/: agent.rs  branch.rs  durability.rs  embed.rs  inference.rs  mod.rs  models.rs  retention.rs  vector.rs
tests/: integration.rs
