[package]
name = "strata-mcp"
version = "0.6.0"
edition = "2021"
description = "MCP server for Strata database"
license = "MIT"
repository = "https://github.com/strata-ai-labs/strata-mcp"
readme = "README.md"
keywords = ["mcp", "database", "ai", "agents", "strata"]
categories = ["database", "development-tools"]

[[bin]]
name = "strata-mcp"
path = "src/main.rs"

[features]
default = ["embed"]
embed = ["stratadb/embed", "dep:strata-intelligence"]

[dependencies]
# Use path dependency for local development
stratadb = { path = "../strata-core" }
# stratadb = { git = "https://github.com/strata-ai-labs/strata-core", branch = "main" }

# Intelligence crate for model download (embed feature only)
strata-intelligence = { path = "../strata-core/crates/intelligence", features = ["embed"], optional = true }
# strata-intelligence = { git = "https://github.com/strata-ai-labs/strata-core", branch = "main", features = ["embed"], optional = true }

clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "io-std", "sync", "io-util", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
